K8S/echo-server/base/deploy.yml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "echo-server"
  namespace: "testing"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "echo-server"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "echo-server"
      annotations:
        promtail.io/collect: "true"
    spec:
      serviceAccountName: "echo-server"
      volumes:
        - name: "tmp"
          emptyDir: {}
      containers:
        - name: "app"
          image: "ealen/echo-server:latest"
          imagePullPolicy: "IfNotPresent"
          volumeMounts:
            - name: "tmp"
              mountPath: "/tmp"
          ports:
            - name: "http"
              protocol: "TCP"
              containerPort: 8080
          resources:
            requests:
              cpu: "10m"
              memory: "20Mi"
            limits:
              cpu: "30m"
              memory: "32Mi"
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
