K8S/echo-server/base/service.yml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "echo-server"
spec:
  selector:
    app.kubernetes.io/name: "echo-server"
  ports:
    - name: "http"
      port: 8080
      protocol: "TCP"
      targetPort: "http"
