K8S/echo-server/base/policy.yml
apiVersion: "networking.k8s.io/v1"
kind: "NetworkPolicy"
metadata:
  name: "echo-server-external-access"
spec:
  policyTypes: ["Ingress"]
  podSelector:
    matchLabels:
      app.kubernetes.io/name: "echo-server"
  ingress:
    - {}
